change container to from overflow:hide to default. This fixes problem that login field wasn't completely visible. issue #72

--- a/client/main.css
+++ b/client/main.css
@@ -25,8 +25,9 @@ body {
   min-height: 650px;
   height: auto;
   background: #f2894a;
+  /*
   overflow: hidden;
-  /* background: white; */
+  background: white; */
 }
 
 /*
@@ -354,6 +355,7 @@ body {
     /*padding: 8px;*/
     position: relative;
     margin-top: 5px;
+    /* margin-right: 100px; */
     float:right;
 
     background:#f9d072;
